# NewsFlow

./: .gitignore  LICENSE  requirements.txt  server.py
newsflow/: .gitignore  README.md  pyproject.toml
newsflow/src/newsflow/: main.py
newsflow/src/newsflow/tools/: custom_tool.py
output/: digest.html
