[project]
name = "newsflow"
version = "0.1.0"
description = "newsflow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.10.1"
]

[project.scripts]
kickoff = "newsflow.main:kickoff"
run_crew = "newsflow.main:kickoff"
plot = "newsflow.main:plot"
run_with_trigger = "newsflow.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
